Bug 89053 - [SKL]“xrandr –output <output> –rotation <rotation>” leads black screen.
Summary: [SKL]“xrandr –output <output> –rotation <rotation>” leads black screen.
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 89075 90071 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-10 05:37 UTC by Jeff Zheng
Modified: 2015-04-22 15:38 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg for xrandr rotation (123.67 KB, text/plain)
2015-02-10 05:37 UTC, Jeff Zheng
no flags Details

Description Jeff Zheng 2015-02-10 05:37:48 UTC
Created attachment 113295 [details]
dmesg for xrandr rotation

==System Environment==
--------------------------
BIOS: V68

Regression: No. First test on this platform

Non-working platforms: SKL

==kernel==
--------------------------
-nightly: 2015_02_09 commit b4442ee4e150506cebeee72249efc566c5f14bbe(fails)

==Bug detailed description==
-----------------------------
“xrandr –output DP2 –rotation left” leads black screen.

Same result if running with other rotation values like "right"


==Reproduce steps==
---------------------------- 
1. xinit&
2. xrandr –output DP2 –rotation left
3. Check the monitor output.
Comment 1 Jani Nikula 2015-02-12 06:41:56 UTC
*** Bug 89075 has been marked as a duplicate of this bug. ***
Comment 2 Paulo Zanoni 2015-03-09 15:26:14 UTC
We just merged some SKL fixes that may affect all display-related tests. Please retest this bug against the latest drm-intel-nightly.
Comment 3 Jeff Zheng 2015-03-10 08:19:58 UTC
Tried on commit commit c09a3b7f343bc87a132ef107cb263e57f8246b88 and still see this issue.
Comment 4 Chris Wilson 2015-03-10 08:28:33 UTC
Reproducible with blt on non-SKL.
Comment 5 Chris Wilson 2015-03-10 08:56:54 UTC
commit 15c307d70e00bc035bb61be5d8b6f727925e3d34
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Mar 10 08:48:48 2015 +0000

    sna: Force frontbuffer to CPU for randr fallback
    
    When we are using the fallback method, we need to make sure the source
    is on the CPU.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89053
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 Timo Aaltonen 2015-04-22 15:38:48 UTC
*** Bug 90071 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.